--- a/style.css
+++ b/style.css
@@ -58,3 +58,13 @@ height: auto;
     height: 60px;
     width: 130px;
 }
+
+.Recepit-body:hover{
+background: white;
+box-shadow: 0px 0px 15px 0px rgb(68, 119, 212);
+height: auto;
+}
+.Recepit-body-details:hover{   
+    padding:1% 18%;
+    font-size: 22px;
+}
